adding some testing info

--- a/Testing/test.ipynb
+++ b/Testing/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import pyqtgraph as pg\n",
     "from PyQt6 import QtGui, QtCore\n",
     "from PyQt6.QtWidgets import QDockWidget, QWidget, QMainWindow\n",
+    "from PyQt6.QtCore import QPointF\n",
     "import PyQt6"
    ]
   },
@@ -92,6 +93,100 @@
     "#popwidget.setLayou\n",
     "main.setCentralWidget(win)\n",
     "main.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.05638842\n",
+      "PyQt6.QtCore.QPointF(0.05638842, 0.01019244)\n",
+      "0.05638842\n",
+      "0.01019244\n"
+     ]
+    }
+   ],
+   "source": [
+    "point = {'pos': ([0.05638842, 0.01019244])}\n",
+    "print(point['pos'][0])\n",
+    "q = QPointF()\n",
+    "q.setX(point['pos'][0])\n",
+    "q.setY(point['pos'][1])\n",
+    "print(q)\n",
+    "print(q.x())\n",
+    "print(q.y())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = []\n",
+    "data.append({})\n",
+    "\n",
+    "for i in range(2):\n",
+    "    for n, key in enumerate(sorted(data[i].keys)):\n",
+    "        for m, item in enumerate(data[i][key]):\n",
+    "            print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'TextItem' object has no attribute 'setOffset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 21\u001b[0m\n\u001b[0;32m     18\u001b[0m roi_item\u001b[38;5;241m.\u001b[39mshow()\n\u001b[0;32m     20\u001b[0m moving_item\u001b[38;5;241m.\u001b[39msetParentItem(roi_item)\n\u001b[1;32m---> 21\u001b[0m \u001b[43mmoving_item\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msetOffset\u001b[49m(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m0.5\u001b[39m)\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# plot.addItem(moving_item, ignoreBounds=True)\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# Use this instead of `plot.addItem`\u001b[39;00m\n\u001b[0;32m     24\u001b[0m still_item\u001b[38;5;241m.\u001b[39msetParentItem(plot\u001b[38;5;241m.\u001b[39mplotItem)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'TextItem' object has no attribute 'setOffset'"
+     ]
+    }
+   ],
+   "source": [
+    "import pyqtgraph as pg\n",
+    "from pyqtgraph.graphicsItems import ROI\n",
+    "\n",
+    "pg.mkQApp()\n",
+    "\n",
+    "plot = pg.PlotWidget()\n",
+    "# moving_item = pg.TextItem(\"Moving\", anchor=(0.5, 0.5))\n",
+    "moving_item = pg.TextItem(\"Moving\")\n",
+    "still_item = pg.TextItem(\"Still\", anchor=(0.5, 0.5))\n",
+    "\n",
+    "still_item.setFlag(still_item.GraphicsItemFlag.ItemIgnoresTransformations)\n",
+    "# ^^^ This line is necessary\n",
+    "\n",
+    "roi_item = ROI.RectROI(pos=[0,0], size=0.5, pen=(255,255,255))\n",
+    "roi_item.setZValue(20)\n",
+    "\n",
+    "plot.addItem(roi_item)\n",
+    "roi_item.show()\n",
+    "\n",
+    "moving_item.setParentItem(roi_item)\n",
+    "# plot.addItem(moving_item, ignoreBounds=True)\n",
+    "# Use this instead of `plot.addItem`\n",
+    "still_item.setParentItem(plot.plotItem)\n",
+    "\n",
+    "# This position will be in pixels, not scene coordinates since transforms are ignored.\n",
+    "# You can use helpers like `mapFromScene()` etc. to translate between pixels\n",
+    "# and viewbox coordinates\n",
+    "still_item.setPos(300, 300)\n",
+    "\n",
+    "plot.show()\n",
+    "\n",
+    "pg.exec()"
    ]
   }
  ],
