--- a/Testing/test.ipynb
+++ b/Testing/test.ipynb
@@ -139,19 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'TextItem' object has no attribute 'setOffset'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 21\u001b[0m\n\u001b[0;32m     18\u001b[0m roi_item\u001b[38;5;241m.\u001b[39mshow()\n\u001b[0;32m     20\u001b[0m moving_item\u001b[38;5;241m.\u001b[39msetParentItem(roi_item)\n\u001b[1;32m---> 21\u001b[0m \u001b[43mmoving_item\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msetOffset\u001b[49m(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m0.5\u001b[39m)\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# plot.addItem(moving_item, ignoreBounds=True)\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# Use this instead of `plot.addItem`\u001b[39;00m\n\u001b[0;32m     24\u001b[0m still_item\u001b[38;5;241m.\u001b[39msetParentItem(plot\u001b[38;5;241m.\u001b[39mplotItem)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'TextItem' object has no attribute 'setOffset'"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -169,7 +168,7 @@
     "# ^^^ This line is necessary\n",
     "\n",
     "roi_item = ROI.RectROI(pos=[0,0], size=0.5, pen=(255,255,255))\n",
-    "roi_item.setZValue(20)\n",
+    "# roi_item.setZValue(20)\n",
     "\n",
     "plot.addItem(roi_item)\n",
     "roi_item.show()\n",
