--- a/Testing/test.ipynb
+++ b/Testing/test.ipynb
@@ -187,6 +187,36 @@
     "\n",
     "pg.exec()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "def contextMenuEvent(self, event):\n",
+    "    self.menu = QtGui.QMenu(self)\n",
+    "    renameAction = QtGui.QAction('Rename', self)\n",
+    "    renameAction.triggered.connect(lambda: self.renameSlot(event))\n",
+    "    self.menu.addAction(renameAction)\n",
+    "    # add other required actions\n",
+    "    self.menu.popup(QtGui.QCursor.pos())\n",
+    "    ...\n",
+    "\n",
+    "def renameSlot(self, event):\n",
+    "    print \"renaming slot called\"\n",
+    "    # get the selected row and column\n",
+    "    row = self.tableWidget.rowAt(event.pos().y())\n",
+    "    col = self.tableWidget.columnAt(event.pos().x())\n",
+    "    # get the selected cell\n",
+    "    cell = self.tableWidget.item(row, col)\n",
+    "    # get the text inside selected cell (if any)\n",
+    "    cellText = cell.text()\n",
+    "    # get the widget inside selected cell (if any)\n",
+    "    widget = self.tableWidget.cellWidget(row, col)\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
