--- a/Testing/test.ipynb
+++ b/Testing/test.ipynb
@@ -217,6 +217,41 @@
     "    widget = self.tableWidget.cellWidget(row, col)\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: qtwidgets in c:\\users\\mkolb\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (1.1)\n",
+      "Requirement already satisfied: markdown in c:\\users\\mkolb\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from qtwidgets) (3.6)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 24.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install qtwidgets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.pythonguis.com/widgets/equalizerbar/"
+   ]
   }
  ],
  "metadata": {
