data for request reply patterns

--- a/Testing/test.ipynb
+++ b/Testing/test.ipynb
@@ -414,6 +414,24 @@
     "w = MainWindow()\n",
     "app.exec()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1713654132313577500\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "print(time.time_ns())"
+   ]
   }
  ],
  "metadata": {
