adding freecodecamp and AI project

--- a/Testing/test.ipynb
+++ b/Testing/test.ipynb
@@ -491,6 +491,54 @@
     "QtWidgets.QApplication.exec()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.7701377868652344\n",
+      "-0.7907037734985352\n",
+      "-0.6187553405761719\n",
+      "-0.7907037734985352\n"
+     ]
+    }
+   ],
+   "source": [
+    "import ntplib\n",
+    "import time\n",
+    "from time import sleep\n",
+    "c = ntplib.NTPClient()\n",
+    "start = time.time()\n",
+    "req = c.request('0.north-america.pool.ntp.org')\n",
+    "req1 = c.request('1.north-america.pool.ntp.org')\n",
+    "print(req.tx_time-start)\n",
+    "print(req.offset)\n",
+    "print(req1.tx_time-start)\n",
+    "print(req.offset)\n",
+    "# for x in range(100):\n",
+    "#     # if req.tx_time > start:\n",
+    "#     print(c.request('0.north-america.pool.ntp.org').tx_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13726400\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
