--- a/Testing/test.ipynb
+++ b/Testing/test.ipynb
@@ -527,18 +527,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13726400\n"
+      "25395.8446591\n",
+      "25395.8779394\n",
+      "25395.9112726\n",
+      "25395.9446059\n",
+      "25395.9779394\n",
+      "25396.0112726\n",
+      "25396.0446058\n",
+      "25396.0779393\n",
+      "25396.1112726\n",
+      "25396.1446058\n",
+      "25396.1779394\n",
+      "25396.2112726\n",
+      "25396.2446357\n",
+      "25396.2779393\n",
+      "25396.3112726\n",
+      "25396.3446058\n",
+      "25396.3779394\n",
+      "25396.4112725\n",
+      "25396.4446058\n",
+      "25396.4779392\n",
+      "25396.5112726\n",
+      "25396.5446059\n",
+      "25396.5779393\n",
+      "25396.6112725\n",
+      "25396.6446059\n",
+      "25396.6779392\n",
+      "25396.7112725\n",
+      "25396.7446059\n",
+      "25396.7779393\n",
+      "25396.8112727\n",
+      "25396.8446058\n",
+      "25396.8779393\n",
+      "25396.9112725\n",
+      "25396.9446058\n",
+      "25396.9779393\n",
+      "25397.0112726\n",
+      "25397.0446059\n",
+      "25397.0779393\n",
+      "25397.1112725\n",
+      "25397.1446059\n",
+      "25397.1779392\n",
+      "25397.2112726\n",
+      "25397.244606\n",
+      "25397.2779393\n",
+      "25397.3112726\n",
+      "25397.3446059\n",
+      "25397.3779392\n",
+      "25397.4112726\n",
+      "25397.4446058\n",
+      "25397.4779393\n",
+      "25397.5112726\n",
+      "25397.5446058\n",
+      "25397.5779392\n",
+      "25397.6112725\n",
+      "25397.6446058\n",
+      "25397.6779392\n",
+      "25397.7112725\n",
+      "25397.7446059\n",
+      "25397.7779392\n",
+      "25397.8112726\n",
+      "25397.8446059\n",
+      "61\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import time\n",
+    "\n",
+    "count = 0\n",
+    "freq = 0\n",
+    "timeNow = time.perf_counter()\n",
+    "timeDur = timeNow + 2\n",
+    "while timeNow <= timeDur:\n",
+    "    count += 1\n",
+    "    now = time.perf_counter()\n",
+    "    if  timeNow < now:\n",
+    "        timeNow += (1/30)\n",
+    "        freq+=1\n",
+    "        print(now)\n",
+    "        \n",
+    "print(freq)"
+   ]
   }
  ],
  "metadata": {
